@@ -1,3 +1,14 @@
+2007-09-29  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Alexey Proskuryakov.
+        
+        WebArchives do not embed stylesheets referenced by xml-stylesheeet
+        http://bugs.webkit.org/show_bug.cgi?id=15320
+
+        * DOM/WebDOMOperations.mm:
+        (-[DOMProcessingInstruction _stylesheetURL]): needed to access [[self sheet] href]
+        (-[DOMProcessingInstruction _subresourceURLs]): call and return _stylesheetURL
+
 2007-09-25  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Oliver Hunt.
